force-app/main/default/objects/Flight_Schedule__c/fields/Destination_Name__c.field-meta.xml
<CustomField>
    <fullName>Destination_Name__c</fullName>
    <label>Destination Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>City</valueSetName>
    </valueSet>
</CustomField>