force-app/main/default/objects/Flight_Schedule__c/fields/Duration_after_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Duration_after_Arrival__c</fullName>
    <formula>IF(
  Arrival_Date_Time__c - Departure_Date_Time__c &gt; 0 ,
  TEXT( FLOOR( Arrival_Date_Time__c - Departure_Date_Time__c ) ) &amp; &quot; days &quot;
  &amp; TEXT( FLOOR( MOD( (Arrival_Date_Time__c - Departure_Date_Time__c ) * 24, 24 ) ) ) &amp; &quot; hours &quot;
  &amp; TEXT( ROUND( MOD( (Arrival_Date_Time__c - Departure_Date_Time__c ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;,
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration after Arrival</label>
    <type>Text</type>
</CustomField>