force-app/main/default/objects/Flight_Schedule__c/fields/First_Pilot_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>First_Pilot_Email_Address__c</fullName>
    <label>First Pilot Email Address</label>
    <type>Email</type>
</CustomField>