force-app/main/default/objects/Flight_Schedule__c/fields/Flight_current_status__c.field-meta.xml
<CustomField>
    <fullName>Flight_current_status__c</fullName>
    <label>Flight current status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Flight schedule</fullName>
                <default>true</default>
                <label>New Flight schedule</label>
            </value>
            <value>
                <fullName>Flight Ready to Depart</fullName>
            </value>
            <value>
                <fullName>Flight ready to Arrive</fullName>
            </value>
            <value>
                <fullName>Flight Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>