force-app/main/default/objects/Flight_Schedule__c/fields/Name_of_Second_Pilot__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Second_Pilot__c</fullName>
    <label>Name of Second Pilot</label>
    <length>30</length>
    <type>Text</type>
</CustomField>