force-app/main/default/objects/Flight_Schedule__c/fields/Second_Pilot_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Second_Pilot_Email_Address__c</fullName>
    <label>Second Pilot Email Address</label>
    <type>Email</type>
</CustomField>