force-app/main/default/objects/Flight_Schedule__c/fields/Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Name__c</fullName>
    <label>Source Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>City</valueSetName>
    </valueSet>
</CustomField>