force-app/main/default/objects/Flight_Schedule__c/validationRules/Prevent_Dept_time_greater_than_Arival.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Dept_time_greater_than_Arival</fullName>
    <active>true</active>
    <errorConditionFormula>Departure_Date_Time__c  &gt;  Arrival_Date_Time__c</errorConditionFormula>
    <errorMessage>Departure time must be less than Arrival Time</errorMessage>
</ValidationRule>