force-app/main/default/objects/Flight_Schedule__c/validationRules/Prevent_same_Depart_Time_Arrival_time.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_same_Depart_Time_Arrival_time</fullName>
    <active>true</active>
    <errorConditionFormula>Departure_Date_Time__c =  Arrival_Date_Time__c</errorConditionFormula>
    <errorMessage>Departure and Arrival time should not be same</errorMessage>
</ValidationRule>