force-app/main/default/objects/Flight_Schedule__c/validationRules/Prevent_Same_Source_and_Destination.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Same_Source_and_Destination</fullName>
    <active>true</active>
    <errorConditionFormula>Text(Destination_Name__c) = Text(Source_Name__c)</errorConditionFormula>
    <errorMessage>Source and destination must be different, Please change</errorMessage>
</ValidationRule>